--- a/veggie-app/appsettings.json
+++ b/veggie-app/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "connect" : "server=localhost;port=3307;database=veggiedb;uid=root;password=root123"
     }
